Added the ability to build a Fat Jar using Maven and Gradle.